membuat variable/Deklarasi variable

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -15,8 +15,16 @@
 
       <!--Tag untuk Javascript  -->
       <script>
-        // 1. Memilih id wrap  2. Metode innerHTML = nulis konten
-        document.getElementById("wrap").innerHTML = "Muhamad Yusup Fajarudin";
+        /* 1. Memilih id wrap  
+         2. Metode innerHTML = nulis konten
+         */
+
+        //  Deklarasi Variable
+        var x = 1929876;
+        var tabungan = 5555750;
+
+        //
+        document.getElementById("wrap").innerHTML = tabungan;
       </script>
     </div>
   </body>
