tipe data string

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -15,16 +15,21 @@
 
       <!--Tag untuk Javascript  -->
       <script>
+        // Deklarasi Variable
+        // ------------------
+        // Nama dimulai dengan huruf atau $ atau _
+        // Nama Boleh mengandung huruf,angka,underscore,dan $ dollar
+        //Nama itu case sensitive
+        // Ada 'reserved word' yang tidak boleh dipakai
+
+        // tipe-data string
+        // perlu tanda kutip
+        var text = "Hai";
+
         /* 1. Memilih id wrap  
          2. Metode innerHTML = nulis konten
          */
-
-        //  Deklarasi Variable
-        var x = 1929876;
-        var tabungan = 5555750;
-
-        //
-        document.getElementById("wrap").innerHTML = tabungan;
+        document.getElementById("wrap").innerHTML = text;
       </script>
     </div>
   </body>
