tipe data angka

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -26,10 +26,15 @@
         // perlu tanda kutip
         var text = "Hai";
 
+        // tipe-data number/angka
+        var angka = 9301;
+        // tipe-data angka (float/bilangan pecahan)
+        var angka2 = 98.99 + 1.2;
+
         /* 1. Memilih id wrap  
          2. Metode innerHTML = nulis konten
          */
-        document.getElementById("wrap").innerHTML = text;
+        document.getElementById("wrap").innerHTML = angka2;
       </script>
     </div>
   </body>
