7. Metode angka_fixed

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -57,7 +57,7 @@
         // var angka_baru = angka.toString() + angka2;
         // var angka_baru = Math.random().toFixed(2) + angka;
         // var angka_baru = Math.min(angka, angka2, angka3, angka4, angka5, angka6); //=> bisa dengan variabel asal tipe datanya juga angka;
-        // var angka_baru = Math.max(angka3, angka4, angka5, angka6);
+        var angka_baru = Math.max(angka3, angka4, angka5, angka6);
 
         /* 1. Memilih id wrap
          2. Metode innerHTML = nulis konten
