metode angka bagian 2

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -52,17 +52,20 @@
         // angka_baru++; //increment (menjumlahkan dengan 1)
         // angka_baru--; //decremet (mengurangi dengan 1);
 
-        // 7. metode angka => toFixed(n), toString(), random(), min(a,b,c), max(a,b,c), dll
+        // 7. metode angka => toFixed(n), toString(), random(), min(a,b,c), max(a,b,c), round(),ceil(),floor(), Object Method(abs,log);
+        // random specific formula => Math.floor(Math.random()*x) + 1;
         // var angka_baru = angka2.toFixed(3);
         // var angka_baru = angka.toString() + angka2;
         // var angka_baru = Math.random().toFixed(2) + angka;
         // var angka_baru = Math.min(angka, angka2, angka3, angka4, angka5, angka6); //=> bisa dengan variabel asal tipe datanya juga angka;
-        var angka_baru = Math.max(angka3, angka4, angka5, angka6);
+        // var angka_baru = Math.max(angka3, angka4, angka5, angka6);
+        // var x = 100;
+        // var y = 1;
+        // var angka_baru = Math.floor(Math.random() * x) + y;
 
         /* 1. Memilih id wrap
          2. Metode innerHTML = nulis konten
          */
-
         document.getElementById("wrap").innerHTML = angka_baru;
       </script>
     </div>
