--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -52,7 +52,7 @@
         // angka_baru++; //increment (menjumlahkan dengan 1)
         // angka_baru--; //decremet (mengurangi dengan 1);
 
-        // 7. metode angka => toFixed(n), toString(), random(), min(a,b,c), max(a,b,c), round(),ceil(),floor(), Object Method(abs,log);
+        //- metode angka => toFixed(n), toString(), random(), min(a,b,c), max(a,b,c), round(),ceil(),floor(), Object Method(abs,log);
         // random specific formula => Math.floor(Math.random()*x) + 1;
         // var angka_baru = angka2.toFixed(3);
         // var angka_baru = angka.toString() + angka2;
@@ -63,10 +63,18 @@
         // var y = 1;
         // var angka_baru = Math.floor(Math.random() * x) + y;
 
+        // ======= metode string =========
+        //length indexOf, last indexOf , search, charAt
+        // toUpperCase, toLowerCase, replace
+        // substring(start,end), substr(start,length);
+
+        // var nama = "Muhamad Yusup Fajarudin";
+        // hasil = nama.replace("Muhamad", "Muhammad");
+
         /* 1. Memilih id wrap
          2. Metode innerHTML = nulis konten
          */
-        document.getElementById("wrap").innerHTML = angka_baru;
+        document.getElementById("wrap").innerHTML = hasil;
       </script>
     </div>
   </body>
