metode string bagian 2

--- a/Sekolah-Koding/index.html
+++ b/Sekolah-Koding/index.html
@@ -67,14 +67,17 @@
         //length indexOf, last indexOf , search, charAt
         // toUpperCase, toLowerCase, replace
         // substring(start,end), substr(start,length);
-
-        // var nama = "Muhamad Yusup Fajarudin";
-        // hasil = nama.replace("Muhamad", "Muhammad");
+        // parseInt(), parseFloat()
+        // var angkaString = "2022.10";
+        // var x = 67.22;
+        // var hasil;
+        // hasil = parseFloat(angkaString) + x;
+        // var hasilLagi = hasil.toFixed(2);
 
         /* 1. Memilih id wrap
          2. Metode innerHTML = nulis konten
          */
-        document.getElementById("wrap").innerHTML = hasil;
+        document.getElementById("wrap").innerHTML = hasilLagi;
       </script>
     </div>
   </body>
