--- a/Sekolah-Koding/bagian-4.html
+++ b/Sekolah-Koding/bagian-4.html
@@ -19,13 +19,25 @@
     <!-- tag Javascript -->
     <script>
       // tipe data boolean
-      let t = true;
-      let f = false;
+      // let t = true;
+      // let f = false;
 
-      // cek lewat button
-      function tampilkanHasil() {
-        document.getElementById("wrap").innerHTML = f;
+      // dasar if else
+      // operator logika == != > >= < <=
+
+      const uang = 15000;
+      const barang = 30000;
+
+      if (uang != barang) {
+        alert("tidak bisa diterima");
+      } else {
+        alert("bisa diterima");
       }
+
+      // // cek lewat button
+      // function tampilkanHasil() {
+      //   document.getElementById("wrap").innerHTML = f;
+      // }
     </script>
     <!-- akhir tag Javascript -->
   </body>
