dua syarat atau lebih

--- a/Sekolah-Koding/bagian-4.html
+++ b/Sekolah-Koding/bagian-4.html
@@ -25,13 +25,14 @@
       // dasar if else
       // operator logika == != > >= < <=
 
-      const uang = 15000;
-      const barang = 30000;
+      const uangDesigner = 15000;
+      const uangProgrammer = 30000;
+      let hargaBarang = 30000;
 
-      if (uang != barang) {
-        alert("tidak bisa diterima");
+      if (uangDesigner == hargaBarang || uangProgrammer == hargaBarang) {
+        alert("Uang anda cukup");
       } else {
-        alert("bisa diterima");
+        alert("uang anda kurang");
       }
 
       // // cek lewat button
