--- a/Sekolah-Koding/bagian-4.html
+++ b/Sekolah-Koding/bagian-4.html
@@ -50,16 +50,33 @@
 
       // nested if
 
-      const uangDesigner = 15000;
-      const uangProgrammer = 2500000;
-      let hargaBarang = 30000;
+      // const uangDesigner = 15000;
+      // const uangProgrammer = 2500000;
+      // let hargaBarang = 30000;
 
-      if (uangProgrammer > hargaBarang) {
-        if (uangProgrammer > hargaBarang * 2) {
-          alert("programmer bisa beli 2 barang");
-        } else {
-          alert("programmer hanya bisa beli 1 barang");
-        }
+      // if (uangProgrammer > hargaBarang) {
+      //   if (uangProgrammer > hargaBarang * 2) {
+      //     alert("programmer bisa beli 2 barang");
+      //   } else {
+      //     alert("programmer hanya bisa beli 1 barang");
+      //   }
+      // }
+
+      let nama = "yunus";
+
+      // switch case
+      switch (nama) {
+        case "yuda":
+          alert("namanya adalah yuda");
+          break;
+        case "yunus":
+          alert("namanya adalah yunus");
+          break;
+        case "yusuf":
+          alert("namanya adalah yusuf");
+          break;
+        default:
+          alert("tidak ada yang tercatat");
       }
 
       // // cek lewat button
