--- a/Sekolah-Koding/bagian-4.html
+++ b/Sekolah-Koding/bagian-4.html
@@ -62,21 +62,30 @@
       //   }
       // }
 
-      let nama = "yunus";
+      // let nama = "yunus";
 
-      // switch case
-      switch (nama) {
-        case "yuda":
-          alert("namanya adalah yuda");
-          break;
-        case "yunus":
-          alert("namanya adalah yunus");
-          break;
-        case "yusuf":
-          alert("namanya adalah yusuf");
-          break;
-        default:
-          alert("tidak ada yang tercatat");
+      // // switch case
+      // switch (nama) {
+      //   case "yuda":
+      //     alert("namanya adalah yuda");
+      //     break;
+      //   case "yunus":
+      //     alert("namanya adalah yunus");
+      //     break;
+      //   case "yusuf":
+      //     alert("namanya adalah yusuf");
+      //     break;
+      //   default:
+      //     alert("tidak ada yang tercatat");
+      // }
+
+      // for loop
+
+      // for (mulai; sampai/syarat; perpindahan)
+
+      let angka = 0;
+      for (let index = 10; index >= angka; index--) {
+        alert(`halo ke ${index}`);
       }
 
       // // cek lewat button
