--- a/Sekolah-Koding/bagian-4.html
+++ b/Sekolah-Koding/bagian-4.html
@@ -86,12 +86,12 @@
       // for (let index = 10; index >= angka; index--) {
       //   alert(`halo ke ${index}`);
       // }
-      let i = 0;
+      let i = 11;
       let text = "";
-      while (i <= 10) {
+      do {
         text += "<br> pengulangan ke " + i;
         i++;
-      }
+      } while (i <= 15);
       document.getElementById("wrap").innerHTML = text;
       // // cek lewat button
       // function tampilkanHasil() {
